04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertview
  namespace: alertview
spec:
  type: ClusterIP
  selector:
    app: alertview
  ports:
    - name: http
      port: 8080
      targetPort: 8080
